lab1/Test/L1-A-1-57.cmm
struct {
<= }h4DT [ 992654035 ] 
;
int return 